[update] 更新 AMD demo

--- a/democode/requirejs-demo/index.html
+++ b/democode/requirejs-demo/index.html
@@ -8,6 +8,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js" data-main="./main.js"></script>
 </head>
 <body>
-  <script src="./other.js"></script>
+  <script src="./exec.js"></script>
 </body>
 </html>
